--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TendoApp">
-        <activity android:name=".SearchResultsActivity">
+<!--        <activity android:name=".SearchResultsActivity">-->
 
-        </activity>
+<!--        </activity>-->
         <activity android:name=".MainActivity2" />
         <activity android:name=".MainActivity">
             <intent-filter>
