--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,10 +33,13 @@ android {
     }
     buildFeatures{
         dataBinding true
+        viewBinding true
     }
 }
 
 dependencies {
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     apply plugin: 'kotlin-android'
     apply plugin: 'kotlin-android-extensions'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
