--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TendoApp">
-        <activity android:name=".ui.main.view.activities.ProfileActivity"></activity>
+        <activity android:name=".ui.main.view.activities.UserActivity"></activity>
+        <activity android:name=".ui.main.view.activities.ProfileActivity" />
         <activity android:name=".ui.main.view.activities.ProductActivity" />
         <activity android:name=".SearchResultsActivity" />
         <activity android:name=".ui.main.view.activities.MainActivity2" />
