--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.TendoApp">
+        android:theme="@style/AppTheme">
         <activity android:name=".ui.main.view.activities.UserActivity"></activity>
         <activity android:name=".ui.main.view.activities.ProfileActivity" />
         android:theme="@style/AppTheme">
