--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,14 +10,19 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".ui.main.view.activities.CheckOutOrderActivity"
+            android:exported="true"
+            android:label="@string/title_activity_check_out_order"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
             android:name=".ui.main.view.activities.CartOrderActivity"
             android:exported="true"
             android:label="@string/title_activity_cart_order"
-        android:parentActivityName=".ui.main.view.activities.MainActivity2"
-        android:theme="@style/AppTheme">
-        <meta-data
-            android:name="android.support.PARENT_ACTIVITY"
-            android:value=".ui.main.view.activities.MainActivity2" />
+            android:parentActivityName=".ui.main.view.activities.MainActivity2"
+            android:theme="@style/AppTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ui.main.view.activities.MainActivity2" />
         </activity>
         <activity
             android:name=".ui.main.view.activities.OrdersActivity"
